--- a/WarehouseEcommerce/Content/Theme/University/app/css/app.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app.css
@@ -2504,7 +2504,10 @@ body.ZoomerActive {
 
 .img_view_area img {
     width: 100% !important;
-    max-width: calc(100% - 1vw)
+    max-width: calc(100% - 1vw);
+    max-height: calc(100% - 1vw);
+    height: 100% !important;
+    object-fit: contain;
 }
 
 .img_view_area .zoomWrapper {
@@ -7322,13 +7325,11 @@ html {
 }
 
 .owl-carousel .owl-item img {
-    height: 239px;
     object-fit: scale-down
 }
 
 .img_thumb_sliderwrap .owl-carousel .owl-item img {
-    height: 100%;
-    min-width: 100%;
+    height: 100px;
 }
 
 .res_navWrapper {
@@ -7342,4 +7343,9 @@ html {
 input[type="checkbox"] {
     min-width: 18px;
     min-height: 18px;
+}
+
+.zoomContainer .zoomLens {
+    max-height: 100%;
+    max-width: 100%;
 }
