--- a/WMS/Views/Theme/Default/Order/_DirectSalesOrders.cshtml
+++ b/WMS/Views/Theme/Default/Order/_DirectSalesOrders.cshtml
@@ -53,7 +53,8 @@
         {
             c.FieldName = "OrderID";
             c.Caption = "Order Id";
-            c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+            c.ColumnType = MVCxGridViewColumnType.SpinEdit;
+            c.Settings.AutoFilterCondition = AutoFilterCondition.Equals;
         });
         settings.Columns.Add(c =>
         {
