--- a/WMS/Views/Theme/Default/Account/Edit.cshtml
+++ b/WMS/Views/Theme/Default/Account/Edit.cshtml
@@ -212,12 +212,15 @@
                 </div>
             </div>
             <div class="col-md-6 pull-left">
-                <div class="input-group h-100 justify-content-center align-items-center">
-                    <label class="col-md-4">Select Market</label>
-                    <div class="col-md-8">
-                        @Html.ListBox("CustomersMarketIds", ViewBag.MarketDetailId as MultiSelectList, new { Multiple = "multiple", @class = "chosen-select", data_placeholder = "Choose Markets" })
+                @if (ViewBag.IsVanSalesEnabled)
+                {
+                    <div class="input-group h-100 justify-content-center align-items-center">
+                        <label class="col-md-4">Select Market</label>
+                        <div class="col-md-8">
+                            @Html.ListBox("CustomersMarketIds", ViewBag.MarketDetailId as MultiSelectList, new { Multiple = "multiple", @class = "chosen-select", data_placeholder = "Choose Markets" })
+                        </div>
                     </div>
-                </div>
+                }
                 <div class="input-group h-100 justify-content-center align-items-center">
                     @Html.LabelFor(model => model.TaxID, htmlAttributes: new { @class = "col-md-4" })
                     <div class="col-md-8">
