added our brands carousel to the home page + some bug fixes and re-factoring

--- a/WMS/Views/Theme/Default/ProductManufacturers/_ProductManufacturerList.cshtml
+++ b/WMS/Views/Theme/Default/ProductManufacturers/_ProductManufacturerList.cshtml
@@ -22,6 +22,7 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
         settings.Columns.Add("Name");
         settings.Columns.Add("Note");
+        settings.Columns.Add("ShowInOurBrands");
         settings.Columns.Add(c =>
         {
             c.FieldName = "DateCreated";
