--- a/WMS/Views/Theme/Default/WebsiteNavigations/Create.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteNavigations/Create.cshtml
@@ -83,20 +83,25 @@
             var typeId = $("#Type :selected").val();
             if (typeId == "1") {
                 $(".showcontentpage").hide();
+                $(".showLinkUrl").hide();
                 $(".ProductsShow").hide();
             }
             else if (typeId == "2") {
                 $(".showcontentpage").show();
+                $(".showLinkUrl").hide();
                 $(".ProductsShow").hide();
             }
             else if (typeId == "3") {
 
                 $(".showcontentpage").hide();
+                $(".showLinkUrl").hide();
                 $(".ProductsShow").show();
-
             }
-
-
+            else if (typeId == "4") {
+                $(".showcontentpage").hide();
+                $(".showLinkUrl").show();
+                $(".ProductsShow").hide();
+            }
         });
     });
     function SelectionChangeds(s, e) {
@@ -148,6 +153,13 @@
                 <div class="col-md-8">
                     @Html.EnumDropDownListFor(model => model.Type, "Select Type", htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="input-group h-100 justify-content-center align-items-center showLinkUrl" style="display:none">
+                @Html.LabelFor(model => model.LinkPageUrl, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.LinkPageUrl, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.LinkPageUrl, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center showcontentpage" style="display:none">
