--- a/WarehouseEcommerce/Views/Theme/University/Home/Index.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Home/Index.cshtml
@@ -4,5 +4,6 @@
 @Html.Action("_SliderPartial")
 @Html.Action("_TopCategoryPartial")
 @Html.Action("_SpecialProductPartial")
+@Html.Action("_OurBrands")
 @Html.Action("_SubscribePartial")
 @Html.Action("_BlogPartial")
