--- a/WMS/Views/Theme/Default/ProductManufacturers/Edit.cshtml
+++ b/WMS/Views/Theme/Default/ProductManufacturers/Edit.cshtml
@@ -52,63 +52,71 @@
         {
             @Html.AntiForgeryToken()
 
-            <div class="form-horizontal">
+        <div class="form-horizontal">
 
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.HiddenFor(model => model.Id)
-                <div class="input-group h-100 justify-content-center align-items-center">
-                    @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-4" })
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                    </div>
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Id)
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
-                <div class="input-group h-100 justify-content-center align-items-center">
-                    @Html.LabelFor(model => model.Note, htmlAttributes: new { @class = "control-label col-md-4" })
-                    <div class="col-md-8">
-                        @Html.TextAreaFor(model => model.Note, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Note, "", new { @class = "text-danger" })
-                    </div>
+            </div>
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.LabelFor(model => model.Note, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    @Html.TextAreaFor(model => model.Note, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Note, "", new { @class = "text-danger" })
                 </div>
-
-                <div class="input-group h-100 justify-content-center align-items-center">
-                    @Html.Label("Image File", new { @class = "col-md-4" })
-                    <div class="col-md-8">
-                        @Html.Partial("_Uploader")
-                        @Html.Hidden("FileLength", (bool?)ViewBag.FileLength)
-                        <br />
-                        <div id="dvfiles" style="display:block;">
-                            <strong>Uploaded Files</strong>
-                            @if (ViewBag.Files != null)
-                            {
-                                foreach (var file in ViewBag.Files)
-                                {
-                                  
-                                    <table>
-                                        <tr>
-                                            <td id="tdProductfileName">@file</td>
-                                            <td>
-                                                <p>&nbsp;</p>
-                                            </td>
-                                            <td><a class="LRemove" onclick="_RemoveProofOfDeliveryFile('@file')">Remove</a></td>
-                                            <td>
-                                                <p>&nbsp;</p>
-                                            </td>
-
-                                        </tr>
-                                    </table>
-                                }
-                            }
-                        </div>
-                    </div>
-                </div>
-                <div class="input-group h-100 justify-content-center align-items-center">
-                    <div class="col-md-offset-2 col-md-10 bottom-right">
-                        <input type="submit" value="Save" class="btn btn-primary" />
-                        <div class="back-list">@Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })</div>
+            </div>
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.LabelFor(model => model.ShowInOurBrands, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    <div class="checkbox">
+                        @Html.EditorFor(model => model.ShowInOurBrands)
+                        @Html.ValidationMessageFor(model => model.ShowInOurBrands, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.Label("Image File", new { @class = "col-md-4" })
+                <div class="col-md-8">
+                    @Html.Partial("_Uploader")
+                    @Html.Hidden("FileLength", (bool?)ViewBag.FileLength)
+                    <br />
+                    <div id="dvfiles" style="display:block;">
+                        <strong>Uploaded Files</strong>
+                        @if (ViewBag.Files != null)
+                        {
+                            foreach (var file in ViewBag.Files)
+                            {
+
+                                <table>
+                                    <tr>
+                                        <td id="tdProductfileName">@file</td>
+                                        <td>
+                                            <p>&nbsp;</p>
+                                        </td>
+                                        <td><a class="LRemove" onclick="_RemoveProofOfDeliveryFile('@file')">Remove</a></td>
+                                        <td>
+                                            <p>&nbsp;</p>
+                                        </td>
+
+                                    </tr>
+                                </table>
+                            }
+                        }
+                    </div>
+                </div>
+            </div>
+            <div class="input-group h-100 justify-content-center align-items-center">
+                <div class="col-md-offset-2 col-md-10 bottom-right">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                    <div class="back-list">@Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })</div>
+                </div>
+            </div>
+        </div>
         }
 
 
