--- a/WMS/Views/Theme/Default/TenantWebsites/Edit.cshtml
+++ b/WMS/Views/Theme/Default/TenantWebsites/Edit.cshtml
@@ -108,10 +108,17 @@
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
-                @Html.LabelFor(model => model.FeaturedTagId,  htmlAttributes: new { @class = "control-label col-md-4" })
+                @Html.LabelFor(model => model.FeaturedTagId, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
                     @Html.DropDownListFor(model => model.FeaturedTagId, ViewBag.ProductTag as SelectList, "Select Tag", htmlAttributes: new { @class = "form-control chosen-select" })
                     @Html.ValidationMessageFor(model => model.FeaturedTagId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.LabelFor(model => model.HomeOurBrandsText, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.HomeOurBrandsText, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.HomeOurBrandsText, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
