Added sort order to manufacturers + some bug fixes.

--- a/WMS/Views/Theme/Default/ProductManufacturers/Delete.cshtml
+++ b/WMS/Views/Theme/Default/ProductManufacturers/Delete.cshtml
@@ -28,6 +28,30 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.ShowInOurBrands)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ShowInOurBrands)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.SortOrder)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SortOrder)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ImagePath)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ImagePath)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Note)
         </dt>
 
