--- a/WMS/Views/Theme/Default/ProductManufacturers/Details.cshtml
+++ b/WMS/Views/Theme/Default/ProductManufacturers/Details.cshtml
@@ -19,6 +19,22 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.ShowInOurBrands)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ShowInOurBrands)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.SortOrder)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SortOrder)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.ImagePath)
         </dt>
 
