--- a/WMS/Views/Theme/Default/ProductAttributes/Edit.cshtml
+++ b/WMS/Views/Theme/Default/ProductAttributes/Edit.cshtml
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="input-group h-100 justify-content-center align-items-center">
-            <label class="col-md-4">Sort Value<span style="color:red">*</span></label>
+            <label class="col-md-4">Sort Order<span style="color:red">*</span></label>
             <div class="col-md-8">
                 @Html.EditorFor(model => model.SortOrder)
                 @Html.ValidationMessageFor(model => model.SortOrder)
@@ -58,6 +58,6 @@
             <div class="back-list">@Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })</div>
         </div>
     </div>
-    
+
 }
 
