--- a/WMS/Views/Theme/Default/ProductManufacturers/Edit.cshtml
+++ b/WMS/Views/Theme/Default/ProductManufacturers/Edit.cshtml
@@ -80,6 +80,13 @@
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
+                <label class="col-md-4">Sort Order<span style="color:red">*</span></label>
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.SortOrder)
+                    @Html.ValidationMessageFor(model => model.SortOrder)
+                </div>
+            </div>
+            <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.Label("Image File", new { @class = "col-md-4" })
                 <div class="col-md-8">
                     @Html.Partial("_Uploader")
