--- a/WMS/Views/Theme/Modern/Shared/_AttrValueCreate.cshtml
+++ b/WMS/Views/Theme/Modern/Shared/_AttrValueCreate.cshtml
@@ -14,7 +14,7 @@
             </div>
         </div>
                 <div class="input-group h-100 justify-content-center align-items-center">
-            <label class="col-md-4">Sort Value<span style="color:red">*</span></label>
+            <label class="col-md-4">Sort Order<span style="color:red">*</span></label>
             <div class="col-md-8">
                 @Html.EditorFor(model => model.SortOrder)
                 @Html.ValidationMessageFor(model => model.SortOrder)
