--- a/WarehouseEcommerce/Views/Theme/University/Products/GroupedProductDetail.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/GroupedProductDetail.cshtml
@@ -47,63 +47,65 @@
                                 isFirstTab = true;
                                 foreach (var item in Model.GroupedTabs)
                                 {
+                                    if (item?.Products != null) {
                                     <div role="tabpanel" class="tab-pane @(isFirstTab ? "active" : "")" id="@item.ProductKitType.Name.Replace(" ", "-")">
-                                        @foreach (var kitProductMaster in item.Products)
+                                        @foreach (var kitProductMaster in item?.Products)
                                         {
-                                            var prices = item.Prices[kitProductMaster.ProductId];
-                                            <div class="nb_prd_det_rightsec product-details-block">
-                                                <h2 class="head">@kitProductMaster.Name</h2>
-                                                <div class="row">
-                                                    <div class="col-md-12 col-lg-12 col-xl-4">
-                                                        <div>SKU: @kitProductMaster.SKUCode</div>
-                                                        @if (kitProductMaster.ProductManufacturer != null)
-                                                        {
-                                                        <div>Brand: <a href="@Url.Action("List", "Products", new { values = "BrandS-" +  kitProductMaster.ProductManufacturer.Name.Replace(" ", "_") })">@kitProductMaster.ProductManufacturer.Name</a></div>
+                                        var prices = item.Prices[kitProductMaster.ProductId];
+                                        <div class="nb_prd_det_rightsec product-details-block">
+                                            <h2 class="head">@kitProductMaster.Name</h2>
+                                            <div class="row">
+                                                <div class="col-md-12 col-lg-12 col-xl-4">
+                                                    <div>SKU: @kitProductMaster.SKUCode</div>
+                                                    @if (kitProductMaster.ProductManufacturer != null)
+                                                    {
+                                                    <div>Brand: <a href="@Url.Action("List", "Products", new { values = "BrandS-" + kitProductMaster.ProductManufacturer.Name.Replace(" ", "_") })">@kitProductMaster.ProductManufacturer.Name</a></div>
+                                                    }
+                                                    @if (!string.IsNullOrEmpty(kitProductMaster.ManufacturerPartNo?.Trim()))
+                                                    {
+                                                    <div>MFP No: @kitProductMaster.ManufacturerPartNo</div>
+                                                    }
+                                                    <div class="availibility">
+                                                        @{
+                                                            var availableProductCount = item.ProductsAvailableCounts[kitProductMaster.ProductId];
+                                                            ViewBag.AvailableProductCount = availableProductCount;
                                                         }
-                                                        @if (!string.IsNullOrEmpty(kitProductMaster.ManufacturerPartNo?.Trim()))
-                                                        {
-                                                        <div>MFP No: @kitProductMaster.ManufacturerPartNo</div>
-                                                        }
-                                                        <div class="availibility">
-                                                            @{
-                                                                var availableProductCount = item.ProductsAvailableCounts[kitProductMaster.ProductId];
-                                                                ViewBag.AvailableProductCount = availableProductCount;
-                                                            }
 
-                                                            @if (availableProductCount > 0)
-                                                            {
-                                                                <span>@(availableProductCount.ToString("#")) In Stock</span>
-                                                            }
-                                                            else
-                                                            {
-                                                                <span>Currently unavailable.</span>
-                                                            }
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-12 col-lg-12 col-xl-8">
-                                                        @if (kitProductMaster.SellPrice != null && kitProductMaster.SellPrice > 0)
+                                                        @if (availableProductCount > 0)
                                                         {
-                                                            <div class="prd_amnt">@ViewBag.CurrencySymbol@(prices.FinalSellPrice + prices.TaxAmount)<span> inc VAT</span></div>
-                                                            <div class="prd_amnt_excl_VAT">(@ViewBag.CurrencySymbol@prices.FinalSellPrice<span> excl VAT</span>)</div>
-                                                            if (kitProductMaster.SellPrice != prices.FinalSellPrice)
-                                                            {
-                                                            <div class="prd_amnt_RRP">RRP @ViewBag.CurrencySymbol@kitProductMaster.SellPrice<span> excl VAT</span></div>
-                                                            }
+                                                            <span>@(availableProductCount.ToString("#")) In Stock</span>
                                                         }
-                                                        @Html.Partial("_ProductDetailActionsButtons", kitProductMaster)
+                                                        else
+                                                        {
+                                                            <span>Currently unavailable.</span>
+                                                        }
                                                     </div>
                                                 </div>
-                                                <div class="attribute-value">
-                                                    <span>@Ganedata.Core.Services.Inventory.GetProductAttributesValueToDisplay(kitProductMaster.ProductAttributeValuesMap)</span>
-                                                </div>
-
-                                                <div class="associated-product-description">
-                                                    @Html.Raw(kitProductMaster.Description)
+                                                <div class="col-md-12 col-lg-12 col-xl-8">
+                                                    @if (kitProductMaster.SellPrice != null && kitProductMaster.SellPrice > 0)
+                                                    {
+                                                        <div class="prd_amnt">@ViewBag.CurrencySymbol@(prices.FinalSellPrice + prices.TaxAmount)<span> inc VAT</span></div>
+                                                        <div class="prd_amnt_excl_VAT">(@ViewBag.CurrencySymbol@prices.FinalSellPrice<span> excl VAT</span>)</div>
+                                                        if (kitProductMaster.SellPrice != prices.FinalSellPrice)
+                                                        {
+                                                        <div class="prd_amnt_RRP">RRP @ViewBag.CurrencySymbol@kitProductMaster.SellPrice<span> excl VAT</span></div>
+                                                        }
+                                                    }
+                                                    @Html.Partial("_ProductDetailActionsButtons", kitProductMaster)
                                                 </div>
                                             </div>
+                                            <div class="attribute-value">
+                                                <span>@Ganedata.Core.Services.Inventory.GetProductAttributesValueToDisplay(kitProductMaster.ProductAttributeValuesMap)</span>
+                                            </div>
+
+                                            <div class="associated-product-description">
+                                                @Html.Raw(kitProductMaster.Description)
+                                            </div>
+                                        </div>
                                         }
                                     </div>
                                     isFirstTab = false;
+                                    }
                                 }
                             }
                         </div>
