--- a/WarehouseEcommerce/Content/Theme/University/app/css/app_responsive.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app_responsive.css
@@ -354,7 +354,19 @@
         bottom: 5px;
     }
 
-    .product-details-section .footSec{
+    .uni-pages-pt {
+        padding-top: 125px;
+    }
+
+    .nb_header {
+        height: 125px;
+    }
+
+    .img_thumb_sliderwrap .owl-carousel .owl-item img {
+        height: unset;
+    }
+
+    .product-details-section .footSec {
         max-width: 350px;
     }
 
