--- a/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
@@ -10,7 +10,7 @@
         @Html.Partial("_ProductDetailBreadCrumb")
         <div class="row">
             <div class="col-md-5 col-lg-4">
-                @Html.Partial("_ProductImagesGallery", Model.Product)
+                @Html.Partial("_ProductFilesGallery", Model.Product)
             </div>
             <div class="col-md-7 col-lg-8">
                 <div class="nb_prd_det_rightsec">
