minor style fixes

--- a/WarehouseEcommerce/Content/Theme/University/app/css/app_responsive.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app_responsive.css
@@ -1111,7 +1111,9 @@
     }
 
     .product-details-section .footSec {
-        display: block
+        display: block;
+        max-width: unset;
+        margin-right: 0px;
     }
 
     .footSec .addTobasket,
